[build-system]
requires = [
  "setuptools",
  "argparse",
  "argcomplete",
]
build-backend = "setuptools.build_meta"


[project]
name = "goit"
description = "Python-based utility for working with the GoIT open-source semiconductor IP hub"
dynamic = ["version"]
authors = [
  {name="Rihards Novickis", email="rihards.novickis@edi.lv"},
]
readme = "README.md"
# TODO:
# classifiers
# requires-python

[tool.setuptools.dynamic]
version = {file = "src/goit/VERSION"}


[project.urls]
Homepage = "https://github.com/goit-project/hardware-hub-utility"
Issues   = "https://github.com/goit-project/hardware-hub-utility/issues"


[project.scripts]
goit = "goit.utility:main"
