[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"


[project]
name = "goit"
description = "Python-based utility for working with the GoIT open-source semiconductor IP hub"
readme = "README.md"
dynamic = ["version"]
authors = [
  {name="Rihards Novickis", email="rihards.novickis@edi.lv"},
]
dependencies = [
  "argparse",
  "argcomplete",
  "vunit_hdl",
]


# TODO:
# classifiers
# requires-python

[tool.setuptools.dynamic]
version = {file = "src/goit/VERSION"}


[project.urls]
Homepage = "https://github.com/goit-project/hardware-hub-utility"
Issues   = "https://github.com/goit-project/hardware-hub-utility/issues"


[project.scripts]
goit = "goit.utility:main"
