[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "goit"
version = "0.0.1"
requires-python = ">=3.12"
license = {text = "LGPL"}
readme = "README.md"
description = "Python-based utility for working with the GoIT open-source silicon IP hub"
authors = [
  {name="Rihards Novickis", email="rihards.novickis@edi.lv"},
  {name="Andis Bizuns",     email="andis.bizuns@edi.lv"},
]
dependencies = [
  "argparse",
  "argcomplete",
  "vunit_hdl",
]
keywords = [
  "Silicon intellectual property",
  "Automation",
  "CLI",
  "GoIT",
]

[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/goit-project/hardware-hub-utility"
Issues   = "https://github.com/goit-project/hardware-hub-utility/issues"

[project.scripts]
goit = "goit.utility:main"
